# voco

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  install  package-lock.json  package.json
.claude/: settings.json
.claude/agents/: asr-benchmark-analyst.md  code-reviewer.md  linux-platform-engineer.md  security-auditor.md  ux-polish-reviewer.md
.claude/commands/: benchmark-asr.md  dependency-audit.md  package-linux.md  review.md  test-insertion.md  validate.md
.claude/rules/: dependency-policy.md  documentation.md  platform-desktop.md  product-quality.md  security.md  testing.md
.github/workflows/: ci.yml  release.yml
apps/desktop/: index.html  package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/examples/: preview_replay_worker.rs
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/resources/: voco_ibus_engine.py  voco_ibus_engine_test.py  voco_ibus_ownership.py  voco_ibus_ownership_test.py  voco_ibus_protocol.py  voco_ibus_protocol_test.py
apps/desktop/src-tauri/src/: config.rs  insertion.rs  lib.rs  main.rs  owned_preedit.rs  single_instance.rs  transcribe.rs  tray.rs
docs/: contributing.md  cursor-streaming-dictation-hardening-spec.md  install.md  linux-packaging.md  local-intelligence-build-goal.md  local-intelligence-spec.md  local-intent-router-spec.md  perfect-dictation-stabilization-spec.md  realtime-conversation-spec.md  release-process.md  store-listing.md  streaming-asr-spec.md  submission-readiness.md  troubleshooting.md
scripts/: build-desktop.sh  check-devops.sh  check-version-consistency.mjs  generate-icons.py  install.sh  linux-uinput-hotkey.c  package-appimage.sh  realtime-protocol-smoke.mjs  realtime-runtime-smoke.sh  rehearse-release.sh  render-release-body.sh  report-cursor-streaming-trace.mjs  report-cursor-streaming-trace.test.mjs  report-dictation-baseline-config.mjs  report-dictation-baseline-config.test.mjs  report-linux-runtime.sh  reset-cursor-streaming-trace.mjs  reset-cursor-streaming-trace.test.mjs  setup.sh  test-install-common.sh  test-private-ibus-engine-hosted.sh  test-private-ibus-engine.py  test-private-ibus-engine.sh  verify-deb-package.sh
snap/: snapcraft.yaml
src/: middleware.ts
(+117 files in other folders)
