[package]
name = "voco"
version = "0.1.0"
description = "A voice-native interface layer designed for speed and precision"
authors = ["VOCO Contributors"]
edition = "2021"

[lib]
name = "voco_lib"
crate-type = ["lib"]

[[bin]]
name = "voco"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
log = "0.4"
env_logger = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
whisper-rs = "0.14"
base64 = "0.22"
sha2 = "0.10"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"], default-features = false }
walkdir = "2"

[profile.release]
opt-level = 2        # Good balance: fast compile, good transcription perf
lto = false          # Skip LTO for faster builds (thin LTO adds ~10s)
codegen-units = 16   # Parallelize codegen (default, but explicit)
strip = true         # Strip debug symbols from binary

[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = { version = "2.0", features = ["v2_40"] }
glib = "0.18"
evdev = "0.12"
