[package]
name = "voco"
version = "2026.0.17"
description = "A voice-native interface layer designed for speed and precision"
authors = ["VOCO Contributors"]
edition = "2021"

[lib]
name = "voco_lib"
crate-type = ["lib"]

[[bin]]
name = "voco"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
log = "0.4"
env_logger = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
whisper-rs = "0.14"
sha2 = "0.10"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"], default-features = false }
walkdir = "2"
image = { version = "0.25", default-features = false, features = ["png"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = { version = "2.0", features = ["v2_40"] }
glib = "0.18"
evdev = "0.12"
inotify = "0.11"
libc = "0.2"
